--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
     "babel-plugin-import": "^1.12.2",
-    "now-cli": "^0.0.0",
+    "now": "^16.6.0",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "typescript": "^3.6.3"
