--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "now-alias": "now alias playlistr.simonbw.now.sh playlistr.simonbw.com"
   },
   "dependencies": {
-    "@material-ui/core": "^4.0.0",
+    "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.4.3",
+    "@material-ui/lab": "^4.0.0-alpha.43",
+    "@types/react-autosuggest": "^9.3.13",
     "classnames": "^2.2.6",
     "export-to-csv": "^0.2.1",
     "get-random-values": "^1.2.0",
     "moment": "^2.24.0",
     "react": "^16.8.0",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.0"
   },
   "devDependencies": {
@@ -27,7 +30,7 @@
     "@types/dom-mediacapture-record": "^1.0.1",
     "@types/moment": "^2.13.0",
     "@types/node": "^12.7.8",
-    "@types/react": "^16.9.3",
+    "@types/react": "^16.8.6",
     "@types/react-dom": "^16.9.1",
     "babel-plugin-import": "^1.12.2",
     "now": "^16.6.0",
